<resources>
    <string name="app_name">AndroidImageSlider</string>

    <string name="action_settings">Settings</string>
    <string name="result">Answer</string>

    <string name="scrolling_view_behavior">Scrolling_view</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="counter">counter</string>
    <string name="worldcup_2k19">worldcup</string>
    <string name="countleft">lcounteft</string>
    <string name="seconds">second</string>
    <string name="minutes">minut</string>
    <string name="hours">hours</string>

    <string name="insert">Insert</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="intro_message">Intro Message</string>


    <string name="stdCal">Standard Calculator</string>
    <string name="sciCal">Scientific Calculator</string>
    <string name="unitCal">Unit Converter</string>
    <string name="FullCal">Calculator App</string>
    <string name="title_activity_standard_cal">StandardCal</string>
    <string name="title_activity_scientific_cal">ScientificCal</string>
    <string name="title_activity_unit_coverter">UnitCoverter</string>
    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="cuberoot">\u221B</string>
    <string name="square">x²</string>
    <string name="cube">x\u00B3</string>
    <string name="tenpow">10\u207F</string>
    <string name="sininv">sin\u207B\u00B9</string>
    <string name="cosinv">cos\u207B\u00B9</string>
    <string name="taninv">tan\u207B\u00B9</string>
    <string name="posneg">±</string>
    <string name="arrow">↑</string>
    <string name="xpown">xⁿ</string>
    <string name="epown">eⁿ</string>
    <string name="pi">π</string>
    <string name="title_activity_unit_area">UnitArea</string>
    <string name="title_activity_unit_length">UnitLength</string>
    <string name="title_activity_unit_weight">UnitWeight</string>
    <string name="title_activity_unit_temperature">UnitTemperature</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="history">History</string>

    <string-array name="area">
        <item>Sq. Millimeter</item>
        <item>Sq. Centimeter</item>
        <item>Sq Meter</item>
        <item>Sq. Kilometer</item>
        <item>Acre</item>
        <item>Hectare</item>
    </string-array>

    <string-array name="length">
        <item>Nanometer</item>
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Inches</item>
        <item>Foot</item>
        <item>Yards</item>
        <item>Mile</item>
    </string-array>

    <string-array name="temperature">
        <item>Celsius</item>
        <item>Farenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string-array name="weight">
        <item>Milligrams</item>
        <item>Centigrams</item>
        <item>Decigrams</item>
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Metric tonnes</item>
        <item>Pounds</item>
        <item>Ounces</item>
    </string-array>

    <string name="title_activity_history">History</string>
    <string name="deleteHistory">Delete History</string>
    <string name="mode1">Degree</string>
    <string name="mode2">Radian</string>
    <string name="toggle">SWITCH</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="naturalLog">ln</string>
    <string name="hyperbolicSine">sinh</string>
    <string name="hyperbolicCosine">cosh</string>
    <string name="hyperbolicTan">tanh</string>
    <string name="log">log</string>
    <string name="Mod">%</string>
    <string name="inverse">1/x</string>
    <string name="factorial">x!</string>>
</resources>
