<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".activity.MainActivity">

        <TextView
            android:id="@+id/timer"
            android:layout_marginLeft="290dp"
            android:layout_width="100dp"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_marginTop="50dp"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_weight="5"
            android:orientation="vertical">

            <Button
                android:id="@+id/rv_button"
                android:background="@color/white"
                android:layout_below="@id/rv_canvas"
                android:layout_width="match_parent"
                android:text="Toggle Question paper"
                android:layout_height="50dp"

                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_canvas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="300dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:src="@drawable/calculator"
                    app:fabSize="normal" />
                <Button
                    android:id="@+id/btn_canvas"
                    android:layout_alignParentRight="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                   />

                <com.felixtechlabs.androidimageslider.view.DrawingView
                    android:id="@+id/drawing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                </com.felixtechlabs.androidimageslider.view.DrawingView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageButton
                        android:id="@+id/insert_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/insert"
                        android:src="@drawable/insert1" />

                    <ImageButton
                        android:id="@+id/new_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/start_new"
                        android:src="@drawable/new_pic" />

                    <ImageButton
                        android:id="@+id/draw_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/brush"
                        android:src="@drawable/brush" />

                    <ImageButton
                        android:id="@+id/undo_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/undo"
                        android:src="@drawable/undo" />

                    <ImageButton
                        android:id="@+id/redo_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/redo"
                        android:src="@drawable/redo" />

                    <ImageButton
                        android:id="@+id/erase_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/erase"
                        android:src="@drawable/eraser" />

                    <ImageButton
                        android:id="@+id/save_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/save"
                        android:src="@drawable/save" />
                </LinearLayout>

                <LinearLayout
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical" >
                <!-- Top Row -->
                <LinearLayout
                    android:id="@+id/paint_colors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFF5F5DC"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FFF5F5DC" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF660000"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FF660000" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFF0000"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FFFF0000" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFF6600"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FFFF6600" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFFFF00"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FFFFFF00" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFFCC00"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FFFFCC00" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF009900"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FF009900" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF00FFFF"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FF00FFFF" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF009999"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FF009999" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF00008B"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FF00008B" />
                </LinearLayout>
                <!-- Bottom Row -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF0000FF"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FF0000FF" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF990099"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FF990099" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFF6666"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FFFF6666" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFF00FF"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FFFF00FF" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFFFFFF"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FFFFFFFF" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF787878"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FF787878" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF00FF00"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FF00FF00" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF000000"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FF000000" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFAA88FF"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FFAA88FF" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFDDDDDD"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/pallet"
                        android:tag="#FFDDDDDD" />
                </LinearLayout>
                </LinearLayout>



            </RelativeLayout>

        </LinearLayout>
</RelativeLayout>